# VehicleManagementSystem

./: CMakeLists.txt  ToDO.txt  main.cpp
Controller/: MainController.cpp  MainController.h
Model/: Driver.cpp  Driver.h  Fleet.cpp  Fleet.h
Model/Others/: Date.cpp  Date.h  File.cpp  File.h  StatusType.h  VehicleType.h
Model/Status/: Available.cpp  Available.h  Broke.cpp  Broke.h  Repair.cpp  Repair.h  Road.cpp  Road.h  Status.cpp  Status.h
Model/Vehicle/: Bus.cpp  Bus.h  Car.cpp  Car.h  PeopleTransport.cpp  PeopleTransport.h  Truck.cpp  Truck.h  Van.cpp  Van.h  Vehicle.cpp  Vehicle.h  WareTransport.cpp  WareTransport.h
View/: GraphicView.cpp  GraphicView.h
View/Elements/: Button.cpp  Button.h  Input.cpp  Input.h  ListItem.cpp  ListItem.h
View/Pages/: AddEditDriverPage.cpp  AddEditDriverPage.h  AddEditVehiclePage.cpp  AddEditVehiclePage.h  AvailablePage.cpp  AvailablePage.h  BasePage.cpp  BasePage.h  BrokePage.cpp  BrokePage.h  ChangeStatusPage.cpp  ChangeStatusPage.h  ClosePage.cpp  ClosePage.h  DriverDataPage.cpp  DriverDataPage.h  ExitPage.cpp  ExitPage.h  FleetStatePage.cpp  FleetStatePage.h  HomePage.cpp  HomePage.h  Page.cpp  Page.h  PageName.h  RepairPage.cpp  RepairPage.h  RoadPage.cpp  RoadPage.h  ShowDriversPage.cpp  ShowDriversPage.h  ShowRegisterPage.cpp  ShowRegisterPage.h  ShowRepairsPage.cpp  ShowRepairsPage.h  ShowVehiclesPage.cpp  ShowVehiclesPage.h  VehicleDataPage.cpp  VehicleDataPage.h
assets/: Drivers.yaml  Vehicles.yaml
